2024-12-18T12:32:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12393003534 # 717
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-18
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 929 2894 / 931 2898
* notice: next accum: outdated-unq outdated-all / unq all: 929 2894 / 932 2899
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-12-18]

2024-12-16T01:20:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12344122643 # 712
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-16
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 928 2893 / 931 2898
* notice: next accum: outdated-unq outdated-all / unq all: 929 2894 / 931 2898
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-12-01] / []

2024-12-13T01:18:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12307766024 # 706
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-13
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 927 2890 / 931 2898
* notice: next accum: outdated-unq outdated-all / unq all: 928 2893 / 931 2898
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-28] / []

2024-12-12T01:17:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12287955574 # 704