@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-12-18T12:32:04Z",
-  "count_outdated" : 2894,
-  "uniques_outdated" : 929,
+  "timestamp" : "2024-12-22T01:16:43Z",
+  "count_outdated" : 2897,
+  "uniques_outdated" : 930,
   "count" : 2899,
   "uniques" : 932,
   "views" : [
-    {
-      "timestamp": "2024-12-07T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-12-11T00:00:00Z",
       "count": 1,
