@@ -1,3 +1,12 @@
+2024-12-22T01:16:43Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12449991310 # 724
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-22
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 929 2894 / 932 2899
+* notice: next accum: outdated-unq outdated-all / unq all: 930 2897 / 932 2899
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-12-07] / []
+
 2024-12-18T12:32:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12393003534 # 717
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-18
